--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "escape-string-regexp": "^4.0.0",
     "express": "^4.17.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ssr-scripts": "2.2.3"
