--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.8",
     "escape-string-regexp": "^4.0.0",
     "express": "^4.17.1",
     "isomorphic-fetch": "^2.2.1",
+    "jest-dom": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-ssr-scripts": "2.2.3"
+    "react-ssr-scripts": "2.2.3",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "build": "react-ssr-scripts build",
